<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="275dp"
    android:layout_height="170dp"
    android:background="@drawable/addalarm_popup_bg"
    android:orientation="vertical"
    android:paddingTop="30dp">

    <TextView
        android:id="@+id/backup_Text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/backup_msg"
        android:textSize="16sp" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/backup_ok"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:background="@drawable/moresetting_ok_selector"
            android:text="@string/ok"
            android:textColor="@color/moresetting_ok" />

        <Button
            android:id="@+id/backup_no"
            android:layout_width="100dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:background="@drawable/moresetting_no_selector"
            android:text="@string/cancel"
            android:textColor="@color/moresetting_no" />

    </RelativeLayout>
</LinearLayout>