<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/addalarm_week_unselect"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="159dp"
            android:layout_height="170dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/stop_clock" />

        <TextView
            android:id="@+id/touchstop_id_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/main_item_time"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/touch_msg"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/touchstop_id_button"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/stop_code_start_selector"
        android:text="@string/cancleAlarm"
        android:textColor="@color/stop_btm" />

</LinearLayout>